unpackaged/main/default/objects/bt_stripe__Gateway_Order__c/bt_stripe__Gateway_Order__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe. This maps to an Order record in the Stripe API.</description>
    <label>Stripe Gateway Order</label>
    <nameField>
        <displayFormat>ORD-{00000}</displayFormat>
        <label>Stripe Gateway Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Gateway Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>