unpackaged/main/default/objects/bt_stripe__Gateway_Order__c/fields/bt_stripe__Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount__c</fullName>
    <description>The total amount for the order.</description>
    <inlineHelpText>The total amount for the order.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>