unpackaged/main/default/objects/bt_stripe__Gateway_Order__c/fields/bt_stripe__Amount_Returned__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount_Returned__c</fullName>
    <label>Amount Returned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>