unpackaged/main/default/objects/bt_stripe__Gateway_Order__c/fields/bt_stripe__Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Email__c</fullName>
    <description>The email address of the customer placing the order.</description>
    <inlineHelpText>The email address of the customer placing the order.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>