unpackaged/main/default/objects/bt_stripe__Gateway_Order__c/fields/bt_stripe__Order_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Order_Id__c</fullName>
    <description>Unique Id for the Order.</description>
    <inlineHelpText>Unique Id for the Order.</inlineHelpText>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>