unpackaged/main/default/objects/bt_stripe__Gateway_Order__c/fields/bt_stripe__Shipping_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_PostalCode__c</fullName>
    <label>Shipping PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>