unpackaged/main/default/objects/bt_stripe__Gateway_Order__c/fields/bt_stripe__Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Status__c</fullName>
    <description>Status of the Order.</description>
    <inlineHelpText>Status of the Order.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>